--- a/installer/install_post.yml
+++ b/installer/install_post.yml
@@ -5,7 +5,7 @@
   become: true
 
   vars:
-    ansible_python_interpreter: /bin/python3
+    ansible_python_interpreter: /usr/bin/python3
 
   #Late tasks, including rebooting
   post_tasks:
